@@ -133,7 +133,11 @@ class Base:
         raise NotImplementedError("build method not implemented in %s" % self.NAME)
 
     def test(self, context, args):
-        if args['version'] == '2.7' or args['version'] >> '3.1' or args['interpreter'] == 'pypy':
+        if self.cfg.test_nose:
+            return 'cd {build_dir}; {interpreter} -m nose --with-doctest {args}'
+        elif self.cfg.test_pytest:
+            return 'cd {build_dir}; {interpreter} -m pytest {args}'
+        elif args['version'] == '2.7' or args['version'] >> '3.1' or args['interpreter'] == 'pypy':
             return 'cd {build_dir}; {interpreter} -m unittest discover -v {args}'
 
     def execute(self, context, args, command, log_file=None):
